(fix) fixes weird spacing in profile buttons

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -208,6 +208,10 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: -3.5rem;
 }
 
+.mb-neg {
+  margin-bottom: -.5rem;
+}
+
 .mobile-back-btn {
   position: relative;
   top: -8rem;
